--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,32 @@ body{
 }
 .party{
     grid-area: party;
+    padding: 20px;
     min-height: 450px;
     background-image: url('../img/halloween.jpg'); 
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
 }
 
+.party>*{
+    background: var(--yellow);
+    padding: 10px;
+}
+
+.cta{
+    background: var(--yellow);
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+}
+
+.cta p{
+    margin: 0;
+}
 
 .cta1{
     grid-area: cta1;
@@ -36,4 +57,21 @@ body{
 
 .cta2{
     grid-area: cta2;
+}
+
+@media(max-width: 1000px){
+    .top{
+        grid-template-areas:
+        "party party cta1"
+        "party party cta2";
+    }
+}
+
+@media(max-width: 420px){
+    .top{
+        grid-template-areas:
+        "party"
+        "cta1"
+        "cta2";
+    }
 }
